# haskell-project-template

./: .editorconfig  .gitattributes  .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  cabal.project.8.10.freeze  cabal.project.8.6.freeze  cabal.project.8.8.freeze  cabal.project.9.0.freeze  cabal.project.9.10.2.freeze  cabal.project.9.12.2.freeze  cabal.project.9.2.5.freeze  cabal.project.9.2.8.freeze  cabal.project.9.2.freeze  cabal.project.9.4.4.freeze  cabal.project.9.4.8.freeze  cabal.project.9.4.freeze  cabal.project.9.6.2.freeze  cabal.project.9.6.3.freeze  cabal.project.9.8.1.freeze  cabal.project.9.8.4.freeze  cabal.project.local  fourmolu.yaml  haskell-project-template.cabal  hie.yaml
.github/workflows/: main.yaml
app/: main.hs
src/: Lib.hs
test/spec/: LibSpec.hs
