cabal-version: 2.2

name: haskell-project-template
version: 0.1.0.0
synopsis: 
description: 
homepage: https://github.com/kakkun61/haskell-project-template
bug-reports: https://github.com/kakkun61/haskell-project-template/issues
license: Apache-2.0
license-file: LICENSE
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@kakkun61.com
copyright: 2021 Kazuki Okamoto (岡本和樹)
category: Data
build-type: Simple
tested-with: GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.3
extra-source-files: README.md,
                    CHANGELOG.md

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
               -Wcompat
  default-language: Haskell2010

library
  import: common
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends: 
  ghc-options: -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wmissing-import-lists
               -Widentities
               -Wredundant-constraints
               -Wpartial-fields
               -Wno-name-shadowing

executable app
  import: common
  hs-source-dirs: app
  main-is: main.hs
  build-depends: haskell-project-template

test-suite doctest
  import: common
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: test/doctest
  build-depends: haskell-project-template,
                 doctest
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: doctest-discover:doctest-discover

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test/spec
  other-modules: LibSpec
  build-depends: haskell-project-template,
                 hspec
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
