cabal-version: 2.2

name: haskell-project-template
version: 0.1.0.0
synopsis:
description:
homepage: https://github.com/kakkun61/haskell-project-template
bug-reports: https://github.com/kakkun61/haskell-project-template/issues
license: Apache-2.0
license-file: LICENSE
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@kakkun61.com
copyright: 2021 Kazuki Okamoto (岡本和樹)
category: Data
build-type: Simple
tested-with: GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4, GHC == 9.0.1
extra-source-files: README.md,
                    CHANGELOG.md

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat
  default-language: Haskell2010

common release
  import: common
  ghc-options: -Wno-name-shadowing
  if impl(ghc >= 6.4)
    ghc-options: -Wincomplete-record-updates
  if impl(ghc >= 6.8)
    ghc-options: -Wmonomorphism-restriction
  if impl(ghc >= 7.0)
    ghc-options: -Wmissing-import-lists
  if impl(ghc >= 7.2)
    ghc-options: -Wincomplete-uni-patterns
                 -Widentities
  if impl(ghc >= 8.0)
    ghc-options: -Wmissing-exported-signatures
                 -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options: -Wmissing-home-modules
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists
                 -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options: -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options: -Wmissing-kind-signatures
                 -Woperator-whitespace
                 -Wredundant-bang-patterns

library
  import: release
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends:

executable app
  import: release
  hs-source-dirs: app
  main-is: main.hs
  build-depends: haskell-project-template

test-suite doctest
  import: common
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: test/doctest
  build-depends: haskell-project-template,
                 doctest
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: doctest-discover:doctest-discover

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test/spec
  other-modules: LibSpec
  build-depends: haskell-project-template,
                 hspec
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
